src/assets/style.css
:root {
  /*
   * according to https://www.color-blindness.com/color-name-hue/
   *
   * amber
   * chartreuse
   * free-speech-green (lime)
   * aqua
   * blue
   * electric-indigo
   * hot-magenta
   */
  --red: var(--base08);
  --orange: var(--base09);
  --yellow: var(--base0A);
  --green: var(--base0B);
  --cyan: var(--base0C);
  --blue: var(--base0D);
  --violet: var(--base0E);
  --magenta: var(--base0F);

  /* convenience */
  --bg: var(--base00);
  --bg-status: var(--base01);
  --bg-selection: var(--base02);
  --fg-alt: var(--base03);
  --fg-status: var(--base04);
  --fg: var(--base05);
  --fg-light: var(--base06);
  --bg-light: var(--base07);

  /* size */
  --thin-stroke: 1px;
  --medium-stroke: 3px;
  --fg-light-stroke: 6px;
  --common-radius: var(--thin-stroke);
}

html {
  display: flex;
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    "Roboto",
    "Oxygen",
    "Ubuntu",
    "Cantarell",
    "Fira Sans",
    "Droid Sans",
    "Helvetica Neue",
    sans-serif;
  justify-content: center;
  font-size: 12pt;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

/* https://www.desmos.com/calculator/3elcf5cwhn */
h1 { font-size: 150%; }
h2 { font-size: 128%; }
h3 { font-size: 120%; }
h4 { font-size: 116%; }
h5 { font-size: 113%; }
h6 { font-size: 111%; }

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0.5em 0;
}

ul,
ol {
  padding-left: 1.5rem;
}

a {
  color: var(--blue);
}

button {
  cursor: pointer;
}

pre {
  overflow-x: auto;
  background-color: var(--bg);
  padding: 1rem;
  font-size: 92%;
  border-radius: var(--common-radius);
  border: var(--thin-stroke) solid var(--bg-status);
}

.message.private {
  background-color: var(--bg-status);
}

.message.reply {
  margin-top: 0;
  margin-bottom: -1px;
}

.message.thread-target {
  border-color: var(--blue);
}

.message img,
.message video {
  max-width: 100%;
  max-height: 30em;
  border: var(--thin-stroke) dotted var(--bg-status);
}

.message audio {
  width: 100%;
}

.message > :first-child {
  margin-top: 0;
  padding-top: 0;
}

.message > :last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

.message code {
  max-width: 100%;
  overflow-wrap: break-word;
  padding: 0.125em 0.25em;
  margin: 0;
  font-size: 85%;
  background-color: var(--bg);
  border-radius: var(--common-radius);
  border: var(--thin-stroke) solid var(--bg-status);
}

.message pre code {
  color: inherit;
  padding: 0;
  margin: 0;
  font-size: 100%;
  background-color: initial;
  border: initial;
  border-radius: initial;
}

@media screen {
  html {
    min-height: 100%;
    color: var(--fg);
    background-color: var(--bg);
  }

  body {
    width: 100%;
    max-width: 42rem;
    margin: 0 1rem;
    overflow: scroll;
  }
}

nav > ul > li > a {
  color: var(--fg);
  text-decoration: none;
  font-weight: bold;
}

.message {
  padding: 1.5rem;
  margin: 1rem 0;
  border-radius: var(--common-radius);
  border: var(--thin-stroke) solid var(--bg-status);
  word-wrap: break-word;
}

.message > header.metadata {
  height: 1.5rem;
  display: flex;
}

.message > header > a > .avatar {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--common-radius);
  margin-right: 0.5rem;
}

.message > footer > a,
.message > footer > form > button {
  color: var(--fg);
  font-weight: bold;
}

.message > header > .text > .author {
  font-weight: bold;
}

.message > header > .text > .author > a {
  color: var(--fg-light);
  text-decoration: none;
}

/*
 * HACK: centered-footer
 *
 * When someone likes a message we want to submit the form and then redirect
 * them back to the original page. Unfortunately when you link to anchor tags
 * that scrolls the browser so that they're at the *top* of the page, not the
 * center of the page. In our view we have an empty div with an appropriate
 * anchor tag, so here we use CSS to center it on the screen.
 *
 * The code below creates padding-top that takes up 50% of the height of the
 * viewport and then gets rid of it with negative margin. This has no effect
 * on the display of the item, but means that when we link to the anchor tag
 * it centers this empty element vertically on the screen.
 *
 * We also use `pointer-events: none` to ensure that this invisible div doesn't
 * capture cursor events (clicks, drags, etc) on surrounding elements, because
 * otherwise we could have a problem where someone clicks above the invisible
 * div but the browser things they're clicking the gigantic amount of padding.
 */
.message > .centered-footer {
  padding-top: 50vh;
  margin-top: -50vh;
  pointer-events: none;
}

.message > footer {
  display: flex;
  justify-content: space-between;
}

.message > footer > * {
  text-decoration: none;
}

.message > footer > form > button.liked {
  color: var(--red);
}

.message > footer > form {
  display: inline-block;
}

.message > footer > form > button {
  display: inline-block;
  border: 0;
  background: transparent;
  cursor: pointer;
  padding: 0;
}

.message blockquote {
  margin-left: 0;
  border-left: var(--fg-light-stroke) solid var(--bg-status);
  padding-left: 1rem;
}

nav > ul {
  display: flex;
  justify-content: space-between;
  margin: 1rem 0;
  padding: 0;
}

nav > ul > li {
  list-style: none;
}

.profile {
  margin-top: 1.5rem;
  display: flex;
  margin-bottom: 1.5rem;
}

.profile > img,
.profile > h1 {
  display: inline-block;
}

.profile > img {
  width: 4rem;
  height: 4rem;
  margin-right: 2rem;
  border-radius: var(--common-radius);
}

progress {
  display: block;
  width: 100%;
}

progress::-moz-progress-bar,
progress::-webkit-progress-value,
progress {
  background: var(--blue);
  border-color: var(--blue);
}

textarea {
  background-color: var(--bg);
  box-sizing: border-box;
  display: block;
  font-size: 1rem;
  padding: 1rem;
  resize: vertical;
  width: 100%;
  margin: 1rem 0;
  height: 6rem;
  transition: 0.0625s all ease;
  border: var(--thin-stroke) solid var(--bg-status);
  border-radius: var(--common-radius);
  color: var(--fg);
}

/*
 * Make textaarea big when textarea siblings are active.
 * Make textarea big when focus is in form.
 *
 * This ensures that trying to click the submit button doesn't change the form.
 */
*:active ~ textarea,
form:focus-within > textarea {
  height: 12rem;
  border-color: var(--blue);
}

/* content warning! */
summary {
  padding: 1rem 0.5rem;
  background-color: hsl(45, 100%, 83%);
  margin: 1rem 0;
  cursor: pointer;
  color: hsl(45, 100%, 20%);
  border: var(--thin-stroke) solid hsl(45, 100%, 66%);
}

.md-mention {
  -moz-user-select: all;
  -ms-user-select: all;
  -webkit-user-select: all;
  user-select: all;
  background: none;
  font-size: 50%;
  text-align: center;
}

